fix: increase z-index for dropdown menu in Topbar component

--- a/components/layout/Topbar.css
+++ b/components/layout/Topbar.css
@@ -50,7 +50,7 @@
   position: absolute;
   top: 100%;
   background-color: #72471c;
-  z-index: 10;
+  z-index: 100;
   width: 180px;
   right: 0;
   margin-top: 5px;
